<?xml version="1.0"?>
<package>
  <name>pr_loop_action</name>
  <version>0.0.0</version>
  <description>pr_loop package</description>

  <maintainer email="PurpleRiver@todo.todo">pr_loop-ws</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib</run_depend> 
  <run_depend>actionlib_msgs</run_depend>
  <build_depend>loop_action</build_depend>
  <run_depend>loop_action</run_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>