<?xml version="1.0"?>
<package format="2">
  <name>loop_action</name>
  <version>0.0.0</version>
  <description>The loop_action package</description>

  <maintainer email="czr@todo.todo">czr</maintainer>

  <license>TODO</license>

  <!-- <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosmsg</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>rosmsg</build_export_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib</exec_depend> 
  <exec_depend>actionlib_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
